--- a/include/header.html
+++ b/include/header.html
@@ -42,13 +42,12 @@
                 </a>
                 <ul id="gnb" class="pc">
                     <li>
-                        <a href="javascript:alert('준비중입니다')">소개</a>
+                        <a href="../about/okzzoa.html">소개</a>
                         <ul class="sub-menu">
-                            <li><a href="javascript:alert('준비중입니다')">연예인봉사단</a></li>
-                        <!-- <li><a href="javascript:alert('준비중입니다')">오케이좋아<br/>연예인봉사단</a></li> -->
-                            <li><a href="javascript:alert('준비중입니다')">조직도</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">CI소개</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">ESG 협업</a></li>
+                            <!-- <li><a href="../about/okzzoa.html">연예인봉사단</a></li> -->
+                        <li><a href="../about/okzzoa.html">오케이좋아<br/>연예인봉사단</a></li>
+                            <li><a href="../about/organization.html">조직도</a></li>
+                            <li><a href="../about/ci.html">CI소개</a></li>
                         </ul>
                     </li>
                     <li>
