--- a/include/header.html
+++ b/include/header.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="active">
         <div class="header-wrap">
             <div class="left">
                 <a href="../main/index.html" class="logo">
@@ -46,6 +46,7 @@
                         <ul class="sub-menu">
                             <!-- <li><a href="../about/okzzoa.html">연예인봉사단</a></li> -->
                         <li><a href="../about/okzzoa.html">오케이좋아<br/>연예인봉사단</a></li>
+                            <li><a href="../about/history.html">연혁</a></li>
                             <li><a href="../about/organization.html">조직도</a></li>
                             <li><a href="../about/ci.html">CI소개</a></li>
                         </ul>
@@ -61,8 +62,9 @@
                     <li>
                         <a href="javascript:alert('준비중입니다')">후원</a>
                         <ul class="sub-menu">
-                            <li><a href="javascript:alert('준비중입니다')">정기후원</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">일시후원</a></li>
+                            <li><a href="javascript:alert('준비중입니다')">정기 일시후원</a></li>
+                            <li><a href="javascript:alert('준비중입니다')">기업후원</a></li>
+                            <li><a href="javascript:alert('준비중입니다')">착한가게</a></li>
                             <li><a href="javascript:alert('준비중입니다')">후원내역</a></li>
                         </ul>
                     </li>
@@ -74,7 +76,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:alert('준비중입니다')">참여</a>
+                        <a href="javascript:alert('준비중입니다')">소식</a>
                         <ul class="sub-menu">
                             <li><a href="javascript:alert('준비중입니다')">공지사항</a></li>
                             <li><a href="javascript:alert('준비중입니다')">언론보도</a></li>
