--- a/scss/_gnb.scss
+++ b/scss/_gnb.scss
@@ -247,3 +247,118 @@ footer{
         }
     }
 }
+
+#tabmenu{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: absolute;
+    right: 0;
+    gap: 10px;
+    top: 80%;
+
+    color: #fff;
+    font-family: "Pretendard";
+    font-size: 18px;
+    font-weight: 500;
+
+    .home{
+        margin-top: 25px;
+        height: 24px;
+        @include flex-center;
+    }
+    .menu{
+        border-radius: 10px;
+        padding: 25px 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        text-align: center;
+        gap: 10px;
+        position: relative;
+        font-size: 18px;
+        cursor: pointer;
+        border: 1px solid transparent;
+        @include transition(1s);
+        .slide{
+            span{
+                width: 100%;
+                display: inline-block;
+                margin-bottom: 10px;
+            }
+            ul{
+                width: 100%;
+                display: none;
+                li{
+                    color: #939393;
+                    height: 24px;
+                    margin-bottom: 10px;
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
+                    &.none{
+                        display: none;
+                    }
+                }
+            }
+        }
+        .arrow{
+            height: 24px;
+            @include flex-center;
+            @include transition(.5s);
+            svg{
+                width: 14px;
+                g{
+                    path{
+                        stroke: white;
+                    }
+                }
+                *{
+                    @include transition(.3s);
+                }
+            }
+        }
+        &:nth-of-type(1){
+            .slide{
+                width: 50px;
+            }
+        }
+        &:nth-of-type(2){
+            .slide{
+                width: 170px;
+            }
+        }
+
+        
+        &.active{
+            @include transition(.3s);
+            background-color: #fff;
+            border-color: #d9d5e1;
+            box-shadow: 5.1px 4.8px 16.2px 1.8px rgba(0, 0, 0, 0.08);    
+            .slide{
+                span{
+                    color: #000;
+                }
+                ul{
+                    height: initial;
+                    li{
+                        &.active{
+                            color: #000;
+                        }
+                    }
+                }
+            }
+            .arrow{
+                transform: rotate(180deg);
+                svg{
+                    g{
+                        path{
+                            stroke: black;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
