--- a/include/tabmenu.html
+++ b/include/tabmenu.html
@@ -30,7 +30,7 @@
                             } ?>"><a href="../">활동</a></li>
                 <li class="<?php if ($PAGE_CODE_1 == "03") {
                                 echo 'none';
-                            } ?>"><a href="../">후원</a></li>
+                            } ?>"><a href="../sponsor/index.html">후원</a></li>
                 <li class="<?php if ($PAGE_CODE_1 == "04") {
                                 echo 'none';
                             } ?>"><a href="../">캠페인</a></li>
@@ -75,7 +75,7 @@
                 } ?>
 
                 <?php if ($PAGE_CODE_2 == "0301") {
-                    echo "정기 일시후원";
+                    echo "정기·일시후원";
                 } ?>
                 <?php if ($PAGE_CODE_2 == "0302") {
                     echo "기업후원";
@@ -134,16 +134,16 @@
                 ?>
                     <li class=<?php if ($PAGE_CODE_2 == "0301") {
                                     echo 'none';
-                                } ?>><a href="../">정기 일시후원</a></li>
+                                } ?>><a href="../sponsor/index.html">정기·일시후원</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0302") {
                                     echo 'none';
-                                } ?>><a href="../">기업후원</a></li>
+                                } ?>><a href="../sponsor/corporate.html">기업후원</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0303") {
                                     echo 'none';
-                                } ?>><a href="../">착한가게</a></li>
+                                } ?>><a href="../sponsor/store.html">착한가게</a></li>
                     <li class=<?php if ($PAGE_CODE_2 == "0304") {
                                     echo 'none';
-                                } ?>><a href="../">후원내역</a></li>
+                                } ?>><a href="../sponsor/list.html">후원내역</a></li>
                 <?php
                 } else if ($PAGE_CODE_1 == "04") {
                 ?>
