--- a/include/header.html
+++ b/include/header.html
@@ -60,12 +60,12 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="javascript:alert('준비중입니다')">후원</a>
+                        <a href="../sponsor/index.html">후원</a>
                         <ul class="sub-menu">
-                            <li><a href="javascript:alert('준비중입니다')">정기 일시후원</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">기업후원</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">착한가게</a></li>
-                            <li><a href="javascript:alert('준비중입니다')">후원내역</a></li>
+                            <li><a href="../sponsor/index.html">정기·일시후원</a></li>
+                            <li><a href="../sponsor/corporate.html">기업후원</a></li>
+                            <li><a href="../sponsor/store.html">착한가게</a></li>
+                            <li><a href="../sponsor/list.html">후원내역</a></li>
                         </ul>
                     </li>
                     <li>
